xine-ui (0.9.13) unstable; urgency=low

  * improved TV mode selection (untested)
  * localization updates (including correct numeric plural forms)
  * aaxine should work with linux or slang drivers again
  * improved performance on IA-32 (compiling without -funroll-all-loops)
  * setup dialog features brand-new xitk scrollbars
  * prev/next buttons optionally switch chapters (instead of MRLs) on supported media
  * invalid buttons (eg. "play" without an MRL) are disabled
  
  And, of course, lots of other small bugfixes and improvements...

 -- Siggi Langauf <siggi@debian.org>  Sat,  3 Aug 2002 20:38:11 +0200

xine-ui (0.9.12) unstable; urgency=low

  * fixed segfault with German localization

 -- Siggi Langauf <siggi@debian.org>  Sun, 23 Jun 2002 12:20:11 +0200

xine-ui (0.9.11) unstable; urgency=low

  * started the xine-ui ChangeLog again
  * lots of bugfixes
  * new, cool, default theme
  * removed all the other themes from default distribution
    (you can still down load them from http://xine.sf.net)
  * xine-ui now reports unsupported codec formats
  * probably more things that I don't recall

 -- Siggi Langauf <siggi@users.sf.net>  Sun, 21 Jun 2002

