@@ -712,6 +712,8 @@ src/xitk/Makefile
 src/xitk/xine-toolkit/Makefile
 src/xitk/xine-toolkit/po/Makefile.in
 src/xitk/skins/Makefile
+src/xitk/skins/xinetic/Makefile
+src/xitk/skins/cloudy/Makefile
 src/xitk/skins/CelomaChrome/Makefile
 src/aaui/Makefile
 src/dfb/Makefile
