@@ -2,20 +2,21 @@ EXTRA_DIST = $(data_DATA)
 
 datadir = $(XINE_SKINDIR)/cloudy
 
-data_DATA =                                                                                       \
-	BigArrowDown.png  LettersMiddle.png   MainPlay.png	 PlBtn.png	  SkItemBtn.png   \
-	BigArrowUp.png	  LettersMini.png     MainPower.png	 PlDelete.png	  SkSlidBG.png    \
-	CtlBg.png	  MainAutoButton.png  MainPrev.png	 PlDeleteAll.png  SkSlidPad.png   \
-	CtlBtn.png	  MainBg.png	      MainStop.png	 PlDismiss.png	  SliderHBg.png   \
-	CtlDismiss.png	  MainButton.png      MainVolumeBg.png	 PlInputTxt.png   SliderHPad.png  \
-	MainDummy.png     MainVolumePad.png   PlItemBtn.png	 SliderVBg.png                    \
-	MainEject.png     MrlBg.png	      PlMoveDn.png	 SliderVPad.png                   \
-	FsBtn.png	  MainFastB.png       MrlBtn.png	 PlMoveUp.png	  SnapBtn.png     \
-	HideBtn.png	  MainFastF.png       MrlDismiss.png	 PlPlay.png	  LettersBlue.png \
-	LettersBig.png	  MainMute.png	      MrlSelect.png	 SetupBtn.png     CtlItemBtn.png  \
-	LettersDigit.png  MainNext.png	      Onglet.png	 OngletSmall.png  SkArrowDown.png \
-	MainPause.png     PlBg.png	      SkArrowUp.png      skinconfig                       \
-        fatsolid.pcf.gz   fonts.dir           smooth.pcf.gz
+data_DATA = ComBox.png		MainBg.png	    MainPower.png	    MrlPlay.png		\
+	ComDismiss.png		MainClose.png	    MainPrev.png	    MrlSelect.png	\
+	ComLetters.png		MainCtlBtn.png	    MainSetup.png	    PlAdd.png		\
+	ComScrollArrowDown.png	MainEject.png	    MainSliderBg.png	    PlBg.png		\
+	ComScrollArrowUp.png	MainFullScreen.png  MainSliderPad.png	    PlDelete.png	\
+	ComScrollBg.png		MainMrlBtn.png	    MainSmallArrowDown.png  PlDeleteAll.png	\
+	ComScrollPad.png	MainMute.png	    MainSmallArrowUp.png    PlInputText.png	\
+	CtlBg.png		MainNext.png	    MainSnapshot.png	    PlItem.png		\
+	CtlSkinItem.png		MainPause.png	    MainStop.png	    PlMoveDown.png	\
+	CtlSkinScrollBg.png	MainPlBtn.png	    MainVolumeBg.png	    PlMoveUp.png	\
+	CtlSliderBg.png		MainPlay.png	    MainVolumePad.png	    PlPlay.png		\
+	CtlSliderPad.png	MainPlayFast.png    MrlBg.png					\
+	MainAutoButton.png	MainPlaySlow.png    MrlItem.png					\
+	fatsolid.pcf.gz 	smooth.pcf.gz 	    fonts.dir \
+	skinconfig
 
 
 
